# advent-of-code

./: .gitignore  Cargo.toml  new-project.nu
2020/01/: Cargo.toml
2020/01/src/: main.rs
2020/02/: Cargo.toml
2020/02/src/: main.rs
2020/03/: Cargo.toml
2020/03/src/: main.rs
2020/04/: Cargo.toml
2020/04/src/: main.rs
2020/05/: Cargo.toml
2020/05/src/: main.rs
2020/06/: Cargo.toml
2020/06/src/: main.rs
2020/07/: Cargo.toml
2020/07/src/: main.rs
2020/08/: Cargo.toml
2020/08/src/: main.rs
2020/09/: Cargo.toml
2020/09/src/: main.rs
2020/10/: Cargo.toml
2024/01/: Cargo.toml
2024/02/: Cargo.toml
2024/02/src/: main.rs
2024/03/: Cargo.toml
2024/03/src/: main.rs
2024/04/: Cargo.toml
2024/04/src/: main.rs
2024/05/: Cargo.toml
2024/05/src/: main.rs
2024/06/: Cargo.toml
2024/06/src/: main.rs
2024/07/: Cargo.toml
2024/07/src/: main.rs
2024/08/: Cargo.toml
2024/08/src/: main.rs
2024/09/: Cargo.toml
2024/09/src/: main.rs
2024/10/: Cargo.toml
2024/10/src/: main.rs
2024/11/: Cargo.toml
2024/11/src/: main.rs
2024/12/: Cargo.toml
2024/12/src/: main.rs
2024/13/: Cargo.toml
2024/14/: Cargo.toml
2024/14/src/: main.rs
2024/15/: Cargo.toml
2024/15/src/: main.rs
2024/16/: Cargo.toml
2024/16/src/: main.rs
2024/17/: Cargo.toml
2024/17/src/: main.rs
2024/18/: Cargo.toml
2024/19/: Cargo.toml
2024/20/: Cargo.toml
2024/20/src/: main.rs
2024/21/: Cargo.toml
2024/21/src/: main.rs
2024/22/: Cargo.toml
2024/23/: Cargo.toml
2024/23/src/: main.rs
2024/24/: Cargo.toml
2024/24/src/: main.rs
2024/25/: Cargo.toml
2024/day_01/: Cargo.toml
2024/day_02/: Cargo.toml
2024/day_03/: Cargo.toml
2024/day_04/: Cargo.toml
2024/day_05/: Cargo.toml
2024/day_06/: Cargo.toml
2024/day_07/: Cargo.toml
2024/day_08/: Cargo.toml
2024/day_09/: Cargo.toml
2024/day_10/: Cargo.toml
2024/day_11/: Cargo.toml
2024/day_12/: Cargo.toml
2024/day_13/: Cargo.toml
2024/day_14/: Cargo.toml
2024/day_15/: Cargo.toml
2024/day_16/: Cargo.toml
2024/day_17/: Cargo.toml
2024/day_18/: Cargo.toml
2024/day_19/: Cargo.toml
2024/day_20/: Cargo.toml
2024/day_21/: Cargo.toml
2024/day_22/: Cargo.toml
2024/day_23/: Cargo.toml
2024/day_24/: Cargo.toml
2024/day_25/: Cargo.toml
2025/01/: Cargo.toml
2025/02/: Cargo.toml
2025/03/: Cargo.toml
2025/04/: Cargo.toml
2025/05/: Cargo.toml
2025/06/: Cargo.toml
2025/07/: Cargo.toml
2025/08/: Cargo.toml
2025/09/: Cargo.toml
2025/10/: Cargo.toml
2025/11/: Cargo.toml
2025/12/: Cargo.toml
common/src/: grid.rs  grid2.rs  iter.rs  lib.rs
(+13 files in other folders)
