[workspace]
resolver = "3"
members = [
    "common",

    "2020/01",
    "2020/02",
    "2020/03",
    "2020/04",
    "2020/05",
    "2020/06",
    "2020/07",
    "2020/08",
    "2020/09",
    "2020/10",

    "2024/01",
    "2024/02",
    "2024/03",
    "2024/04",
    "2024/05",
    "2024/06",
    "2024/07",
    "2024/08",
    "2024/09",
    "2024/10",
    "2024/11",
    "2024/12",
    "2024/13",
    "2024/14",
    "2024/15",
    "2024/16",
    "2024/17",
    "2024/18",
    "2024/19",
    "2024/20",
    "2024/21",
    "2024/22",
    "2024/23",
    "2024/24",
    "2024/25",

    "2025/01",
    "2025/02", 
    "2025/03", 
    "2025/04", 
    "2025/05", 
    "2025/06",
]

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
common = { path = "common" }
pathfinding = "4.14.0"
regex = "1.12.2"
rayon = "1.11.0"

[workspace.dependencies.utils]
package = "rust-utils"
git = "https://github.com/SoxPopuli/rust-utils.git"
tag = "v2.0.0"
features = ["string_stream"]
